--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1957,6 +1957,7 @@ div.reflex-datepicker div.content div.month caption
 	
 	background-image	: url('../../admin/img/template/wave.png');
 	background-color	: #D7812A;
+	background-position	: 0% -50%;
 	
 	height	: 2.5em;
 	
