--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1999,6 +1999,20 @@ div.reflex-datepicker div.content div.month caption span
 	padding			: 0.25em;
 }
 
+div.reflex-datepicker div.content div.month td
+{
+	
+	min-width	: 2em;
+	max-width	: 2em;
+	width		: 2em;
+	
+	min-height	: 2em;
+	max-height	: 2em;
+	height		: 2em;
+	
+	padding-right	: 0.25em;
+}
+
 div.reflex-datepicker div.content div.month td.day
 {
 	border	: 1px solid #BF8E5F;
@@ -2008,18 +2022,8 @@ div.reflex-datepicker div.content div.month td.day
 	background-repeat	: repeat-x;
 	background-position	: 50%;
 	
-	padding-right	: 0.25em;
-	
 	text-align		: right;
 	vertical-align	: middle;
-	
-	min-width	: 2em;
-	max-width	: 2em;
-	width		: 2em;
-	
-	min-height	: 2em;
-	max-height	: 2em;
-	height		: 2em;
 }
 
 div.reflex-datepicker div.content div.month td.day.selectable:hover
