--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1982,7 +1982,7 @@ div.reflex-datepicker div.content div.month tr.days th
 	font-weight		: bold;
 }
 
-div.reflex-datepicker div.content div.month tr.days
+div.reflex-datepicker div.content div.month thead
 {
 	border-bottom	: 0.1em solid #BF8E5F;
 }
