--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -2047,9 +2047,16 @@ div.reflex-datepicker div.content div.month td.day.selectable:hover
 }
 
 /* Day Mutator Classes */
-.reflex-datepicker-day-today
+.reflex-datepicker-day-today span
 {
-	color	: #BF6A17;
+	color			: #BF6A17;
+	border-bottom	: 0.1em dotted #BF6A17;
+}
+
+.reflex-datepicker-day-selected
+{
+	color				: #BF6A17;
+	background-color	: #BF6A17;
 }
 
 /******************************************************************************/
