--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -2133,6 +2133,10 @@ div.reflex-slider-rail-range
 {
 	position	: absolute;
 	
+	min-height	: 100%;
+	max-height	: 100%;
+	height		: 100%;
+	
 	background-color	: #CF8D4D;
 	background-image	: url('../../admin/img/template/wave.png');
 }
