--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1558,7 +1558,8 @@ div.tab-group.embedded div.tab-row
 
 div.tab-group div.tab
 {
-	float							: left;
+	/*float							: left;*/
+	display							: inline-block;
 	position						: relative;
 	top								: 1px;
 	margin-left						: 0.25em;
