--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -2301,9 +2301,9 @@ div.reflex-tree *
 	margin		: 0px;
 }
 
-div.reflex-tree > ul
+div.reflex-tree ul
 {
-	display	: inline-block;
+	list-style-type	: none;
 }
 
 ul.reflex-tree-node-children
