--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -2324,15 +2324,23 @@ ul.reflex-tree-node-children
 
 div.reflex-tree-node-icon,
 div.reflex-tree-node-expand,
+{
+	min-width	: 2em;
+	max-width	: 2em;
+	width		: 2em;
+	
+	min-height	: 2em;
+	max-height	: 2em;
+	height		: 2em;
+}
+
 div.reflex-tree-node-icon img
 {
-	min-width	: 16px;
-	max-width	: 16px;
-	width		: 16px;
+	vertical-align	: middle;
+	text-align		: center;
 	
-	min-height	: 16px;
-	max-height	: 16px;
-	height		: 16px;
+	max-width		: 2em;
+	max-height		: 2em;
 }
 
 /******************************************************************************/
