work on a new Tree control

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -2297,8 +2297,8 @@ div.reflex-tree
 
 div.reflex-tree *
 {
-	paddding	: 0px;
-	margin		: 0px;
+	padding	: 0px;
+	margin	: 0px;
 }
 
 div.reflex-tree ul
