--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -2348,13 +2348,13 @@ div.reflex-tree-node-expand.reflex-tree-node-expanded
 div.reflex-tree-node-icon,
 div.reflex-tree-node-expand
 {
-	min-width	: 2em;
-	max-width	: 2em;
-	width		: 2em;
+	min-width	: 16px;
+	max-width	: 16px;
+	width		: 16px;
 	
-	min-height	: 2em;
-	max-height	: 2em;
-	height		: 2em;
+	min-height	: 16px;
+	max-height	: 16px;
+	height		: 16px;
 }
 
 div.reflex-tree-node-icon img
