--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -2337,11 +2337,13 @@ div.reflex-tree-node-children > ul
 
 div.reflex-tree-node-expand
 {
+	display				: inline-block;
 	background-image	: url("../img/template/tree_closed.png");
 }
 
 div.reflex-tree-node-expand.reflex-tree-node-expanded
 {
+	display				: inline-block;
 	background-image	: url("../img/template/tree_open.png");
 }
 
