--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -2350,13 +2350,9 @@ div.reflex-tree-node-children > ul
 
 span.reflex-tree-node-expand
 {
-	min-width	: 16px;
-	max-width	: 16px;
-	width		: 16px;
-	
-	min-height	: 16px;
-	max-height	: 16px;
-	height		: 16px;
+	/* Using padding instead of width/height because padding will override the span collapse */
+	padding-top		: 16px;
+	padding-left	: 16px;
 }
 
 span.reflex-tree-node-expandable
