work on Treeview

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -2315,10 +2315,21 @@ ul.reflex-tree-node-columns > li.reflex-tree-node-column
 	white-space		: nowrap;
 }
 
+ul.reflex-tree-node-columns > li.reflex-tree-node-column:nth-child(2) > span
+{
+	border-left	: 1px dotted #ccc;
+}
+
 div.reflex-tree ul.reflex-tree-header > li > span,
 div.reflex-tree ul.reflex-tree-footer > li > span
 {
 	padding-left	: 0.25em;
+}
+
+div.reflex-tree ul.reflex-tree-header > li:nth-child(2) > span,
+div.reflex-tree ul.reflex-tree-footer > li:nth-child(2) > span
+{
+	border-left	: 1px solid #ccc;
 }
 
 ul.reflex-tree-body > li.reflex-tree-node > ul.reflex-tree-node-columns
