work on Treeview

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -2315,7 +2315,7 @@ ul.reflex-tree-node-columns > li.reflex-tree-node-column
 	white-space		: nowrap;
 }
 
-ul.reflex-tree-node-columns > li.reflex-tree-node-column:nth-child(2) > span
+ul.reflex-tree-node-columns > li.reflex-tree-node-column:nth-child(n+2) > span
 {
 	border-left	: 1px dotted #ccc;
 }
@@ -2326,8 +2326,8 @@ div.reflex-tree ul.reflex-tree-footer > li > span
 	padding-left	: 0.25em;
 }
 
-div.reflex-tree ul.reflex-tree-header > li:nth-child(2) > span,
-div.reflex-tree ul.reflex-tree-footer > li:nth-child(2) > span
+div.reflex-tree ul.reflex-tree-header > li:nth-child(n+2) > span,
+div.reflex-tree ul.reflex-tree-footer > li:nth-child(n+2) > span
 {
 	border-left	: 1px solid #ccc;
 }
